Add swagger docs for verifying paymaster APIs
